Dodana aktivnost za registraciju, preimenovana aktivnost za login, otkrivena greska, genymotion ne podrzava google authentication. testiranje na mobitelu

--- a/BeerMate/app/src/main/res/layout/activity_login.xml
+++ b/BeerMate/app/src/main/res/layout/activity_login.xml
@@ -38,6 +38,13 @@
             android:layout_margin="15dp"
             android:text="Signup" />
 
+        <TextView
+            android:id="@+id/textViewRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register here!"
+            />
+
     </LinearLayout>
 
 </RelativeLayout>
