--- a/BeerMate/app/src/main/res/layout/activity_login.xml
+++ b/BeerMate/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,44 +8,84 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@mipmap/background">
 
     <LinearLayout
-        android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/editTextEmail"
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Enter email"
-            android:inputType="textEmailAddress" />
+            android:hint="@string/emailLogin"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="10dp" />
 
         <EditText
             android:id="@+id/editTextPassword"
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Enter password"
-            android:inputType="textPassword" />
+            android:hint="@string/passwordLogin"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp" />
 
         <Button
             android:id="@+id/buttonSignup"
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Signup" />
+            android:text="@string/signupButtonLogin" />
 
         <TextView
             android:id="@+id/textViewRegister"
             android:layout_width="match_parent"
+            android:layout_margin="15dp"
             android:layout_height="wrap_content"
-            android:text="Register here!"
-            />
+            android:text="@string/signUpLogin"
+            android:paddingLeft="77dp" />
+
+        <ImageView
+            android:layout_width="350dp"
+            android:layout_height="120dp"
+            app:srcCompat="@mipmap/beer"
+            android:adjustViewBounds="true"
+            android:maxWidth="200dp"
+            android:maxHeight="200dp"
+            android:scaleType="fitCenter"
+            android:layout_marginLeft="3dp"
+            android:id="@+id/imageView"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="8dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:text="@string/naslovLogin"
+        android:fontFamily="Roboto"
+        android:textSize="50sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="30dp"
+        android:textColor="#2f2f2f"
+        android:id="@+id/textView5" />
 
 </RelativeLayout>
