--- a/BeerMate/app/src/main/res/layout/activity_register.xml
+++ b/BeerMate/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,57 +8,88 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@mipmap/background">
 
     <LinearLayout
-        android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="1"
+        android:layout_alignParentBottom="true">
 
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Enter username"
-             />
+            android:hint="@string/usernameRegister"
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
+            android:paddingLeft="10dp" />
 
         <EditText
             android:id="@+id/editTextMailRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Enter mail"
-            android:inputType="textEmailAddress" />
+            android:hint="@string/mailRegister"
+            android:inputType="textEmailAddress"
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
+            android:paddingLeft="10dp" />
+
         <EditText
         android:id="@+id/editTextPasswordRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:hint="Enter password"
-        android:inputType="textPassword" />
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
+        android:hint="@string/passwordRegister"
+        android:inputType="textPassword"
+            android:paddingLeft="10dp" />
 
         <EditText
             android:id="@+id/editTextRepeatPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Repeat password"
-            android:inputType="textPassword" />
+            android:hint="@string/repeatPassRegister"
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
+            android:inputType="textPassword"
+            android:paddingLeft="10dp" />
 
         <Button
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Register" />
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
+            android:text="@string/buttonRegister" />
+
         <Button
             android:id="@+id/buttonBack"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Back" />
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
+            android:text="@string/backRegister" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@mipmap/beer"
+            android:id="@+id/imageView2" />
 
     </LinearLayout>
 
