--- a/BeerMate/app/src/main/res/layout/activity_main.xml
+++ b/BeerMate/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/logout"
+        android:onClick="logOut"
         android:id="@+id/imageView14"
         android:background="@mipmap/background"
         android:layout_alignTop="@+id/imageView13"
