--- a/BeerMate/app/src/main/res/layout/activity_login.xml
+++ b/BeerMate/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:text="@string/naslovLogin"
         android:fontFamily="Roboto"
         android:textSize="50sp"
+        android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -34,7 +35,7 @@
         <EditText
             android:id="@+id/editTextEmail"
             android:fontFamily="Roboto"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,7 +47,7 @@
         <EditText
             android:id="@+id/editTextPassword"
             android:fontFamily="Roboto"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +59,7 @@
         <Button
             android:id="@+id/buttonSignup"
             android:fontFamily="Roboto"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
@@ -69,8 +70,8 @@
             android:layout_width="match_parent"
             android:layout_margin="15dp"
             android:layout_height="wrap_content"
-            android:text="@string/signUpLogin"
-            android:paddingLeft="77dp" />
+            android:textAlignment="center"
+            android:text="@string/signUpLogin" />
 
         <ImageView
             android:layout_width="350dp"
