--- a/BeerMate/app/src/main/res/menu/menu_search.xml
+++ b/BeerMate/app/src/main/res/menu/menu_search.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/menuSearch"
+    android:title="Search"
+    android:icon="@android:drawable/ic_menu_search"
+    app:actionViewClass="android.widget.SearchView"
+    app:showAsAction="always"
+    >
+
+</item>
+    <item android:id="@+id/nesto"
         android:title="Search"
         android:icon="@android:drawable/ic_menu_search"
         app:actionViewClass="android.widget.SearchView"
