Izmjena filtera za pretrazivanje

--- a/BeerMate/app/src/main/res/menu/menu_search.xml
+++ b/BeerMate/app/src/main/res/menu/menu_search.xml
@@ -29,9 +29,9 @@
 
         </item>
         <item
-            android:id="@+id/ratingBeer"
+            android:id="@+id/typeBeer"
             android:orderInCategory="4"
-            android:title="Rating">
+            android:title="Type">
 
         </item>
 
