--- a/BeerMate/app/src/main/res/layout/activity_main.xml
+++ b/BeerMate/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_height="240dp"
         app:srcCompat="@mipmap/settings"
         android:id="@+id/imageView13"
+        android:onClick="openSettings"
         android:background="@mipmap/background"
         android:layout_below="@+id/imageView12"
         android:layout_alignParentStart="true"
