--- a/BeerMate/app/src/main/res/layout/activity_settings.xml
+++ b/BeerMate/app/src/main/res/layout/activity_settings.xml
@@ -10,4 +10,98 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hr.foi.air.beermate.SettingsActivity">
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="1"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:text="@string/naslovLogin"
+            android:fontFamily="Roboto"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="30dp"
+            android:textColor="#2f2f2f"
+            android:id="@+id/textView5" />
+        <Button
+            android:id="@+id/btnSetStar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
+            android:text="Star ranking"
+            android:onClick="updateStar"
+            />
+        <Button
+            android:id="@+id/btnSetTap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
+            android:text="Tap ranking"
+            android:onClick="updateTap"/>
+
+        <TextView
+            android:text="Username"
+            android:fontFamily="Roboto"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="30dp"
+            android:textColor="#2f2f2f"
+            android:id="@+id/textView56" />
+
+        <Button
+            android:id="@+id/btnCatchUsernaame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
+            android:text="Catch username"
+            android:onClick="catchUsername"/>
+
+        <EditText
+            android:id="@+id/editTextUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:hint="@string/usernameRegister"
+            android:fontFamily="Roboto"
+            android:textSize="24dp"
+            android:background="#ffffff"
+            android:paddingLeft="10dp" />
+
+        <Button
+            android:id="@+id/btnSetUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:fontFamily="Roboto"
+            android:textSize="20dp"
+            android:text="Change"
+            android:onClick="updateUserName"/>
+
+
+
+
+
+
+        </LinearLayout>
+
 </RelativeLayout>
