--- a/BeerMate/app/src/main/res/layout/activity_main.xml
+++ b/BeerMate/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         android:layout_marginStart="44dp"
         android:id="@+id/textView2"
         android:fontFamily="Roboto"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_alignBaseline="@+id/textView"
         android:layout_alignBottom="@+id/textView"
         android:layout_alignStart="@+id/imageView12" />
@@ -80,7 +80,7 @@
         android:layout_marginBottom="18dp"
         android:id="@+id/textView3"
         android:fontFamily="Roboto"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_marginStart="46dp"
         android:gravity="center"
         android:layout_alignParentBottom="true"
@@ -93,7 +93,7 @@
         android:layout_marginBottom="17dp"
         android:id="@+id/textView"
         android:fontFamily="Roboto"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_above="@+id/imageView13"
         android:layout_alignStart="@+id/textView3"
         android:layout_marginStart="10dp" />
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
         android:fontFamily="Roboto"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:gravity="center"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
