--- a/BeerMate/app/src/main/res/layout/beer_row.xml
+++ b/BeerMate/app/src/main/res/layout/beer_row.xml
@@ -6,7 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@mipmap/background">
 
 
 
@@ -23,6 +24,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/post_title"
             android:text="Post title goes here"
+            android:fontFamily="Roboto"
             android:padding="15dp"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -49,7 +51,7 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:text="Type"
-            android:textColor="@color/authui_colorActivated" />
+            android:textColor="@color/black" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
