--- a/BeerMate/app/src/main/res/layout/star_rank_dialog.xml
+++ b/BeerMate/app/src/main/res/layout/star_rank_dialog.xml
@@ -3,10 +3,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="2dip">
+    android:padding="2dip"
+    android:background="@mipmap/background">
 
     <TextView android:text="Beer Name" android:id="@+id/star_rank_dialog_text"
         android:textSize="24dp" android:layout_marginTop="10dp"
+        android:textColor="@color/grey"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
@@ -16,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:progressTint="@color/grey"
         android:id="@+id/star_rank_dialog_ratingbar"
         android:layout_gravity="center"
         android:numStars="5" android:stepSize="1.0" android:rating="2"
@@ -24,13 +27,13 @@
     <Button android:id="@+id/star_rank_dialog_rateBtn"
         android:layout_height="wrap_content"
         android:text="RANK"  android:focusable="false"
-        android:layout_margin="5dip" android:textColor="#FFF8C6"
+        android:layout_margin="5dip" android:textColor="@color/grey"
         android:textSize="20dip" android:layout_width="fill_parent" />
 
     <Button android:id="@+id/star_rank_dialog_cancelBtn"
         android:layout_height="wrap_content"
         android:text="CANCEL"  android:focusable="false"
-        android:layout_margin="5dip" android:textColor="#FFF8C6"
+        android:layout_margin="5dip" android:textColor="@color/grey"
         android:textSize="20dip" android:layout_width="fill_parent" />
 
 </LinearLayout>
