Dorada dizajna, te ispravka filtera za percentage

--- a/BeerMate/app/src/main/res/layout/activity_beers.xml
+++ b/BeerMate/app/src/main/res/layout/activity_beers.xml
@@ -6,10 +6,12 @@
     android:id="@+id/activity_beers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="hr.foi.air.beermate.BeersListActivity">
+    tools:context="hr.foi.air.beermate.BeersListActivity"
+    android:background="@mipmap/background">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="match_parent"
-       android:layout_height="match_parent" />
+       android:layout_height="match_parent"
+       android:background="@mipmap/background"/>
 </RelativeLayout>
 
