--- a/BeerMate/app/src/main/res/layout/activity_login.xml
+++ b/BeerMate/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
         <EditText
             android:id="@+id/editTextEmail"
             android:fontFamily="Roboto"
-            android:textSize="24sp"
+            android:textSize="24dp"
             android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
         <EditText
             android:id="@+id/editTextPassword"
             android:fontFamily="Roboto"
-            android:textSize="24sp"
+            android:textSize="24dp"
             android:background="#ffffff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
         <Button
             android:id="@+id/buttonSignup"
             android:fontFamily="Roboto"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
