--- a/BeerMate/app/src/main/res/layout/activity_settings.xml
+++ b/BeerMate/app/src/main/res/layout/activity_settings.xml
@@ -130,7 +130,8 @@
             android:layout_gravity="center_horizontal"
             android:fontFamily="Roboto"
             android:textSize="15dp"
-            android:id="@+id/button2" />
+            android:id="@+id/button2"
+            android:onClick="closeSettings"/>
 
 
     </LinearLayout>
