--- a/BeerMate/app/src/main/res/layout/beer_row.xml
+++ b/BeerMate/app/src/main/res/layout/beer_row.xml
@@ -17,30 +17,35 @@
             android:id="@+id/post_image"
             android:src="@drawable/com_facebook_profile_picture_blank_portrait"
             android:scaleType="centerCrop"
+            android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:layout_marginStart="75dp" />
+
+            android:layout_marginTop="10dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/post_title"
             android:text="Post title goes here"
+            android:textColor="@color/grey"
             android:fontFamily="Roboto"
             android:padding="15dp"
-            android:textSize="18sp"
+            android:textSize="25dp"
             android:textStyle="bold" />
         <Button
             android:id="@+id/buttonRate"
             android:fontFamily="Roboto"
-            android:textSize="20sp"
-            android:layout_width="match_parent"
+            android:textSize="20dp"
+            android:layout_width="170dp"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:text="Rate it!" />
         <Button
             android:id="@+id/buttonShowPubs"
             android:fontFamily="Roboto"
-            android:textSize="20sp"
-            android:layout_width="match_parent"
+            android:textSize="20dp"
+            android:layout_width="170dp"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:text="Availability" />
@@ -49,7 +54,7 @@
             android:layout_width="match_parent"
             android:background="#07000000"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:text="Type"
             android:textColor="@color/black" />
         <TextView
@@ -65,9 +70,9 @@
             android:layout_width="match_parent"
             android:background="#07000000"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:text="Percentage"
-            android:textColor="@color/authui_colorActivated" />
+            android:textColor="@color/black" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,9 +86,9 @@
             android:layout_width="match_parent"
             android:background="#07000000"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:text="Country"
-            android:textColor="@color/authui_colorActivated" />
+            android:textColor="@color/black" />
 
         <TextView
             android:layout_width="match_parent"
@@ -99,9 +104,9 @@
             android:layout_width="match_parent"
             android:background="#07000000"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:text="Brewery"
-            android:textColor="@color/authui_colorActivated" />
+            android:textColor="@color/black" />
 
         <TextView
             android:layout_width="match_parent"
@@ -116,9 +121,9 @@
             android:layout_width="match_parent"
             android:background="#07000000"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:text="Average rate"
-            android:textColor="@color/authui_colorActivated" />
+            android:textColor="@color/black" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -132,9 +137,9 @@
             android:layout_width="match_parent"
             android:background="#07000000"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16dp"
             android:text="Votes"
-            android:textColor="@color/authui_colorActivated" />
+            android:textColor="@color/black" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
