--- a/BeerMate/app/src/main/res/layout/availability_dialog.xml
+++ b/BeerMate/app/src/main/res/layout/availability_dialog.xml
@@ -6,14 +6,14 @@
     android:padding="2dip"
     android:background="@mipmap/background">
 
-    <TextView android:text="Locations:" android:id="@+id/avLoc"
+    <TextView android:text="@string/locations_" android:id="@+id/avLoc"
         android:textSize="24dp" android:layout_marginTop="10dp"
         android:fontFamily="Roboto"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
     <ListView
-        android:text="Pubs Names"
+        android:text="@string/pubs_names"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pub_show_list"
@@ -25,7 +25,7 @@
 
     <Button android:id="@+id/pub_show_cancel"
         android:layout_height="wrap_content"
-        android:text="CANCEL"  android:focusable="false"
+        android:text="@string/cancel"  android:focusable="false"
         android:layout_margin="5dip" android:textColor="#FFF8C6"
         android:textSize="20dip" android:layout_width="fill_parent" />
 
